crates/ir/tests/snapshots/lower_test__modules__ufcs_trait_unaffected.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__ufcs_trait_unaffected

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
fn map(v0: Int, v1: (Int) -> Int) -> Int =
  let v2: Int = call_closure v1(v0)
  v2

fn double(v3: Int) -> Int =
  let v4: Int = add_int(v3, v3)
  v4

fn main() -> Int =
  let v7: (Int) -> Int = make_closure(lambda$27, [])
  let v8: Int = call map(5, v7)
  v8

fn lambda$27(v5: Int) -> Int =
  let v6: Int = call double(v5)
  v6
