crates/ir/tests/snapshots/lower_test__modules__use_both.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__use_both

extern java "krypton.runtime.KryptonIO" println(a8) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import helpers_a/compute as add10(Int) -> Int
import helpers_b/compute as mul10(Int) -> Int
declare add10: (Int) -> Int
declare mul10: (Int) -> Int
declare println: (a8) -> Unit

fn main() -> Unit =
  let v0: Int = call mul10(1)
  let v1: Int = call add10(v0)
  let v2: Unit = call println(v1)
  v2
