crates/ir/tests/snapshots/lower_test__modules__use_math.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__use_math

extern java "krypton.runtime.KryptonIO" println(u8): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import math/vec/sum as sum(Int, Int): Int
declare println: (u8) -> Unit
declare sum: (Int, Int) -> Int

fn main() -> Unit =
  let v0: Int = call sum(3, 5)
  let v1: Unit = call println(v0)
  v1
