crates/ir/tests/snapshots/lower_test__modules__use_prelude_eq_in_lib.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__use_prelude_eq_in_lib

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/io/println as println(s): Unit
import prelude_eq_in_lib/are_equal as are_equal(Int, Int): Bool
declare are_equal: (Int, Int) -> Bool
declare println: (s) -> Unit

fn main() -> Unit =
  let v1: Bool = call are_equal(1, 1)
  let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v2: Unit = call println(v0, v1)
  v2
